--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
   "name": "@casual-ui/utils",
-  "description": "Casual Utils library",
+  "description": "The utility functions for Casual UI",
   "version": "0.0.1",
   "type": "module",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts",
-  "main": "dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "import": "./src/index.ts"
+    }
+  },
+  "publishConfig": {
+    "exports": {
+      ".": {
+        "types": "dist/index.d.ts",
+        "import": "dist/index.mjs"
+      }
+    }
+  },
   "scripts": {
-    "build": "tsc -p ./tsconfig.json"
+    "build": "unbuild",
+    "release": "changeset publish"
   },
   "devDependencies": {
-    "typescript": "^4.7.4"
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.1",
+    "typescript": "^4.7.4",
+    "unbuild": "^1.2.1"
   },
   "author": {
     "email": "1197160272@qq.com",
