--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "release": "changeset publish"
   },
   "devDependencies": {
+    "@casual-ui/eslint-config-typescript": "^0.3.2",
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.1",
-    "typescript": "^4.7.4",
+    "eslint": "^8.43.0",
+    "typescript": "^5.1.3",
     "unbuild": "^1.2.1"
+  },
+  "dependencies": {
+    "@floating-ui/dom": "^1.4.1"
   },
   "author": {
     "email": "1197160272@qq.com",
