--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "dist"
   ],
   "exports": {
-    ".": {
-      "types": "./src/index.ts",
-      "import": "./src/index.ts"
-    }
+    ".": "./src/index.ts"
   },
   "publishConfig": {
     "exports": {
