chore: udate ci

--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -23,6 +23,8 @@ jobs:
           version: 7.14.0
       - name: Install Dependencies
         run: pnpm i
+      - name: Build
+        run: pnpm build
       - name: Create release and publish to npm
         id: changesets
         uses: changesets/action@v1
